Assn4/a3.output
   0  $accept : %entry% $end

   1  main : ifte_expr DELIMITER
   2       | ifte_expr
   3       | EOF

   4  ifte_expr : IF sub_expr THEN sub_expr ELSE sub_expr FI
   5            | sub_expr

   6  sub_expr : sub_expr MINUS add_expr
   7           | add_expr

   8  add_expr : add_expr PLUS mult_expr
   9           | mult_expr

  10  mult_expr : mult_expr MUL mod_expr
  11            | mod_expr

  12  mod_expr : mod_expr MOD div_expr
  13           | div_expr

  14  div_expr : div_expr DIV exponent_expr
  15           | exponent_expr

  16  exponent_expr : abs_expr EXP exponent_expr
  17                | abs_expr

  18  abs_expr : ABS comparison_expr
  19           | comparison_expr

  20  comparison_expr : comparison_expr GEQ and_expr
  21                  | comparison_expr LEQ and_expr
  22                  | comparison_expr GTA and_expr
  23                  | comparison_expr LTA and_expr
  24                  | comparison_expr EQ and_expr
  25                  | and_expr

  26  and_expr : and_expr AND or_expr
  27           | or_expr

  28  or_expr : or_expr OR not_expr
  29          | not_expr

  30  not_expr : NOT paren_expr
  31           | paren_expr

  32  paren_expr : LP ifte_expr RP
  33             | constant

  34  constant : ID
  35           | INT
  36           | BOOL

  37  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (37)

	LP  shift 3
	IF  shift 4
	EOF  shift 5
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	main  goto 11
	ifte_expr  goto 12
	sub_expr  goto 13
	add_expr  goto 14
	mult_expr  goto 15
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	paren_expr : LP . ifte_expr RP  (32)

	LP  shift 3
	IF  shift 4
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	ifte_expr  goto 26
	sub_expr  goto 13
	add_expr  goto 14
	mult_expr  goto 15
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 4
	ifte_expr : IF . sub_expr THEN sub_expr ELSE sub_expr FI  (4)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	sub_expr  goto 27
	add_expr  goto 14
	mult_expr  goto 15
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 5
	main : EOF .  (3)

	.  reduce 3


state 6
	abs_expr : ABS . comparison_expr  (18)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	comparison_expr  goto 28
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 7
	not_expr : NOT . paren_expr  (30)

	LP  shift 3
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	paren_expr  goto 29
	constant  goto 25


state 8
	constant : INT .  (35)

	.  reduce 35


state 9
	constant : ID .  (34)

	.  reduce 34


state 10
	constant : BOOL .  (36)

	.  reduce 36


state 11
	%entry% : '\001' main .  (37)

	.  reduce 37


state 12
	main : ifte_expr . DELIMITER  (1)
	main : ifte_expr .  (2)

	DELIMITER  shift 30
	$end  reduce 2


state 13
	ifte_expr : sub_expr .  (5)
	sub_expr : sub_expr . MINUS add_expr  (6)

	MINUS  shift 31
	$end  reduce 5
	RP  reduce 5
	DELIMITER  reduce 5


state 14
	sub_expr : add_expr .  (7)
	add_expr : add_expr . PLUS mult_expr  (8)

	PLUS  shift 32
	$end  reduce 7
	RP  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	FI  reduce 7
	DELIMITER  reduce 7
	MINUS  reduce 7


state 15
	add_expr : mult_expr .  (9)
	mult_expr : mult_expr . MUL mod_expr  (10)

	MUL  shift 33
	$end  reduce 9
	RP  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	FI  reduce 9
	DELIMITER  reduce 9
	PLUS  reduce 9
	MINUS  reduce 9


state 16
	mult_expr : mod_expr .  (11)
	mod_expr : mod_expr . MOD div_expr  (12)

	MOD  shift 34
	$end  reduce 11
	RP  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	FI  reduce 11
	DELIMITER  reduce 11
	MUL  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11


state 17
	mod_expr : div_expr .  (13)
	div_expr : div_expr . DIV exponent_expr  (14)

	DIV  shift 35
	$end  reduce 13
	RP  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	FI  reduce 13
	DELIMITER  reduce 13
	MOD  reduce 13
	MUL  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13


state 18
	div_expr : exponent_expr .  (15)

	.  reduce 15


state 19
	exponent_expr : abs_expr . EXP exponent_expr  (16)
	exponent_expr : abs_expr .  (17)

	EXP  shift 36
	$end  reduce 17
	RP  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	FI  reduce 17
	DELIMITER  reduce 17
	DIV  reduce 17
	MOD  reduce 17
	MUL  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17


state 20
	abs_expr : comparison_expr .  (19)
	comparison_expr : comparison_expr . GEQ and_expr  (20)
	comparison_expr : comparison_expr . LEQ and_expr  (21)
	comparison_expr : comparison_expr . GTA and_expr  (22)
	comparison_expr : comparison_expr . LTA and_expr  (23)
	comparison_expr : comparison_expr . EQ and_expr  (24)

	EQ  shift 37
	GTA  shift 38
	LTA  shift 39
	GEQ  shift 40
	LEQ  shift 41
	$end  reduce 19
	RP  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	FI  reduce 19
	DELIMITER  reduce 19
	EXP  reduce 19
	DIV  reduce 19
	MOD  reduce 19
	MUL  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19


state 21
	comparison_expr : and_expr .  (25)
	and_expr : and_expr . AND or_expr  (26)

	AND  shift 42
	$end  reduce 25
	RP  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	FI  reduce 25
	DELIMITER  reduce 25
	EQ  reduce 25
	GTA  reduce 25
	LTA  reduce 25
	GEQ  reduce 25
	LEQ  reduce 25
	EXP  reduce 25
	DIV  reduce 25
	MOD  reduce 25
	MUL  reduce 25
	PLUS  reduce 25
	MINUS  reduce 25


state 22
	and_expr : or_expr .  (27)
	or_expr : or_expr . OR not_expr  (28)

	OR  shift 43
	$end  reduce 27
	RP  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	FI  reduce 27
	DELIMITER  reduce 27
	EQ  reduce 27
	GTA  reduce 27
	LTA  reduce 27
	GEQ  reduce 27
	LEQ  reduce 27
	EXP  reduce 27
	DIV  reduce 27
	MOD  reduce 27
	MUL  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	AND  reduce 27


state 23
	or_expr : not_expr .  (29)

	.  reduce 29


state 24
	not_expr : paren_expr .  (31)

	.  reduce 31


state 25
	paren_expr : constant .  (33)

	.  reduce 33


state 26
	paren_expr : LP ifte_expr . RP  (32)

	RP  shift 44
	.  error


state 27
	ifte_expr : IF sub_expr . THEN sub_expr ELSE sub_expr FI  (4)
	sub_expr : sub_expr . MINUS add_expr  (6)

	THEN  shift 45
	MINUS  shift 31
	.  error


state 28
	abs_expr : ABS comparison_expr .  (18)
	comparison_expr : comparison_expr . GEQ and_expr  (20)
	comparison_expr : comparison_expr . LEQ and_expr  (21)
	comparison_expr : comparison_expr . GTA and_expr  (22)
	comparison_expr : comparison_expr . LTA and_expr  (23)
	comparison_expr : comparison_expr . EQ and_expr  (24)

	EQ  shift 37
	GTA  shift 38
	LTA  shift 39
	GEQ  shift 40
	LEQ  shift 41
	$end  reduce 18
	RP  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	FI  reduce 18
	DELIMITER  reduce 18
	EXP  reduce 18
	DIV  reduce 18
	MOD  reduce 18
	MUL  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18


state 29
	not_expr : NOT paren_expr .  (30)

	.  reduce 30


state 30
	main : ifte_expr DELIMITER .  (1)

	.  reduce 1


state 31
	sub_expr : sub_expr MINUS . add_expr  (6)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	add_expr  goto 46
	mult_expr  goto 15
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 32
	add_expr : add_expr PLUS . mult_expr  (8)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	mult_expr  goto 47
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 33
	mult_expr : mult_expr MUL . mod_expr  (10)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	mod_expr  goto 48
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 34
	mod_expr : mod_expr MOD . div_expr  (12)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	div_expr  goto 49
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 35
	div_expr : div_expr DIV . exponent_expr  (14)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	exponent_expr  goto 50
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 36
	exponent_expr : abs_expr EXP . exponent_expr  (16)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	exponent_expr  goto 51
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 37
	comparison_expr : comparison_expr EQ . and_expr  (24)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	and_expr  goto 52
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 38
	comparison_expr : comparison_expr GTA . and_expr  (22)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	and_expr  goto 53
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 39
	comparison_expr : comparison_expr LTA . and_expr  (23)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	and_expr  goto 54
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 40
	comparison_expr : comparison_expr GEQ . and_expr  (20)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	and_expr  goto 55
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 41
	comparison_expr : comparison_expr LEQ . and_expr  (21)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	and_expr  goto 56
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 42
	and_expr : and_expr AND . or_expr  (26)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	or_expr  goto 57
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 43
	or_expr : or_expr OR . not_expr  (28)

	LP  shift 3
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	not_expr  goto 58
	paren_expr  goto 24
	constant  goto 25


state 44
	paren_expr : LP ifte_expr RP .  (32)

	.  reduce 32


state 45
	ifte_expr : IF sub_expr THEN . sub_expr ELSE sub_expr FI  (4)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	sub_expr  goto 59
	add_expr  goto 14
	mult_expr  goto 15
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 46
	sub_expr : sub_expr MINUS add_expr .  (6)
	add_expr : add_expr . PLUS mult_expr  (8)

	PLUS  shift 32
	$end  reduce 6
	RP  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	FI  reduce 6
	DELIMITER  reduce 6
	MINUS  reduce 6


state 47
	add_expr : add_expr PLUS mult_expr .  (8)
	mult_expr : mult_expr . MUL mod_expr  (10)

	MUL  shift 33
	$end  reduce 8
	RP  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	FI  reduce 8
	DELIMITER  reduce 8
	PLUS  reduce 8
	MINUS  reduce 8


state 48
	mult_expr : mult_expr MUL mod_expr .  (10)
	mod_expr : mod_expr . MOD div_expr  (12)

	MOD  shift 34
	$end  reduce 10
	RP  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	FI  reduce 10
	DELIMITER  reduce 10
	MUL  reduce 10
	PLUS  reduce 10
	MINUS  reduce 10


state 49
	mod_expr : mod_expr MOD div_expr .  (12)
	div_expr : div_expr . DIV exponent_expr  (14)

	DIV  shift 35
	$end  reduce 12
	RP  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	FI  reduce 12
	DELIMITER  reduce 12
	MOD  reduce 12
	MUL  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12


state 50
	div_expr : div_expr DIV exponent_expr .  (14)

	.  reduce 14


state 51
	exponent_expr : abs_expr EXP exponent_expr .  (16)

	.  reduce 16


state 52
	comparison_expr : comparison_expr EQ and_expr .  (24)
	and_expr : and_expr . AND or_expr  (26)

	AND  shift 42
	$end  reduce 24
	RP  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	FI  reduce 24
	DELIMITER  reduce 24
	EQ  reduce 24
	GTA  reduce 24
	LTA  reduce 24
	GEQ  reduce 24
	LEQ  reduce 24
	EXP  reduce 24
	DIV  reduce 24
	MOD  reduce 24
	MUL  reduce 24
	PLUS  reduce 24
	MINUS  reduce 24


state 53
	comparison_expr : comparison_expr GTA and_expr .  (22)
	and_expr : and_expr . AND or_expr  (26)

	AND  shift 42
	$end  reduce 22
	RP  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	FI  reduce 22
	DELIMITER  reduce 22
	EQ  reduce 22
	GTA  reduce 22
	LTA  reduce 22
	GEQ  reduce 22
	LEQ  reduce 22
	EXP  reduce 22
	DIV  reduce 22
	MOD  reduce 22
	MUL  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22


state 54
	comparison_expr : comparison_expr LTA and_expr .  (23)
	and_expr : and_expr . AND or_expr  (26)

	AND  shift 42
	$end  reduce 23
	RP  reduce 23
	THEN  reduce 23
	ELSE  reduce 23
	FI  reduce 23
	DELIMITER  reduce 23
	EQ  reduce 23
	GTA  reduce 23
	LTA  reduce 23
	GEQ  reduce 23
	LEQ  reduce 23
	EXP  reduce 23
	DIV  reduce 23
	MOD  reduce 23
	MUL  reduce 23
	PLUS  reduce 23
	MINUS  reduce 23


state 55
	comparison_expr : comparison_expr GEQ and_expr .  (20)
	and_expr : and_expr . AND or_expr  (26)

	AND  shift 42
	$end  reduce 20
	RP  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	FI  reduce 20
	DELIMITER  reduce 20
	EQ  reduce 20
	GTA  reduce 20
	LTA  reduce 20
	GEQ  reduce 20
	LEQ  reduce 20
	EXP  reduce 20
	DIV  reduce 20
	MOD  reduce 20
	MUL  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20


state 56
	comparison_expr : comparison_expr LEQ and_expr .  (21)
	and_expr : and_expr . AND or_expr  (26)

	AND  shift 42
	$end  reduce 21
	RP  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	FI  reduce 21
	DELIMITER  reduce 21
	EQ  reduce 21
	GTA  reduce 21
	LTA  reduce 21
	GEQ  reduce 21
	LEQ  reduce 21
	EXP  reduce 21
	DIV  reduce 21
	MOD  reduce 21
	MUL  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21


state 57
	and_expr : and_expr AND or_expr .  (26)
	or_expr : or_expr . OR not_expr  (28)

	OR  shift 43
	$end  reduce 26
	RP  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	FI  reduce 26
	DELIMITER  reduce 26
	EQ  reduce 26
	GTA  reduce 26
	LTA  reduce 26
	GEQ  reduce 26
	LEQ  reduce 26
	EXP  reduce 26
	DIV  reduce 26
	MOD  reduce 26
	MUL  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	AND  reduce 26


state 58
	or_expr : or_expr OR not_expr .  (28)

	.  reduce 28


state 59
	ifte_expr : IF sub_expr THEN sub_expr . ELSE sub_expr FI  (4)
	sub_expr : sub_expr . MINUS add_expr  (6)

	ELSE  shift 60
	MINUS  shift 31
	.  error


state 60
	ifte_expr : IF sub_expr THEN sub_expr ELSE . sub_expr FI  (4)

	LP  shift 3
	ABS  shift 6
	NOT  shift 7
	INT  shift 8
	ID  shift 9
	BOOL  shift 10
	.  error

	sub_expr  goto 61
	add_expr  goto 14
	mult_expr  goto 15
	mod_expr  goto 16
	div_expr  goto 17
	exponent_expr  goto 18
	abs_expr  goto 19
	comparison_expr  goto 20
	and_expr  goto 21
	or_expr  goto 22
	not_expr  goto 23
	paren_expr  goto 24
	constant  goto 25


state 61
	ifte_expr : IF sub_expr THEN sub_expr ELSE sub_expr . FI  (4)
	sub_expr : sub_expr . MINUS add_expr  (6)

	FI  shift 62
	MINUS  shift 31
	.  error


state 62
	ifte_expr : IF sub_expr THEN sub_expr ELSE sub_expr FI .  (4)

	.  reduce 4


31 terminals, 17 nonterminals
38 grammar rules, 63 states
